<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/create_account_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/return_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:contentDescription="@string/left_arrow"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_account_header"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="16dp">

        <EditText
            android:id="@+id/group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="username"
            android:background="@color/primary_shade"
            android:ems="10"
            android:hint="@string/create_account_username"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="email"
            android:background="@color/primary_shade"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@color/primary_shade"
            android:ems="10"
            android:hint="@string/create_account_password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color"
            android:text="@string/create_account_button_text"
            android:textAllCaps="true"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>