<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_event_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_event_text"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="134dp"
        android:text="@string/create_event"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/select_date"
        android:inputType="date"
        android:labelFor="@+id/event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/event_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/select_time"
        android:inputType="time"
        android:labelFor="@+id/event_time"
        app:layout_constraintBottom_toTopOf="@+id/start_time_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/start_time_label" />

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="34dp"
        android:text="@string/start_time_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/event_start_time"
        app:layout_constraintTop_toBottomOf="@+id/date_label" />

    <TextView
        android:id="@+id/end_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:text="@string/end_time_text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/event_end_time"
        app:layout_constraintEnd_toStartOf="@+id/event_end_time" />

    <TextView
        android:id="@+id/event_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="113dp"
        android:text="@string/event_type"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/event_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="41dp"
        android:text="@string/event_name"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/event_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/event_name_text" />

    <Spinner
        android:id="@+id/event_type_dropdown"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:entries="@array/event_types"
        android:spinnerMode="dropdown"
        app:layout_constraintBaseline_toBaselineOf="@+id/event_type_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_name_label" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/start_time_label"
        app:layout_constraintTop_toTopOf="@+id/event_date" />

    <EditText
        android:id="@+id/event_name_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/event_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_name_label"
        app:layout_constraintTop_toBottomOf="@+id/event_type_dropdown" />

    <EditText
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_location" />

    <EditText
        android:id="@+id/event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_end_time" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="42dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/event_title"
        app:layout_constraintEnd_toStartOf="@+id/event_title"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_event_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/event_location"
        app:layout_constraintEnd_toEndOf="@+id/description_label" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="54dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/create_event_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <EditText
        android:id="@+id/event_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="33dp"
        android:hint="@string/select_time"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_start_time" />

</androidx.constraintlayout.widget.ConstraintLayout>