<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/logo_homepage"
        android:layout_width="224dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="93dp"
        android:text="@string/homepage_title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homepage_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homepage_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="18dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/create_account_button"
        app:layout_constraintStart_toStartOf="@+id/create_account_button"
        app:layout_constraintTop_toBottomOf="@+id/logo_homepage" />

    <TextView
        android:id="@+id/create_account_button"
        android:layout_width="136dp"
        android:layout_height="0dp"
        android:layout_marginBottom="293dp"
        android:text="@string/create_account_link"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>